# aureli

./: .gitignore  Cargo.toml  README.md
src/: grader.rs  lib.rs  main.rs  reporter.rs  utils.rs
submissions/submission-1/: main.js  package-lock.json
submissions/submission-2/: main.js  package-lock.json  report.json
submissions/submission-3/: auto-review-config.json  main.js  report.json
submissions/submission-4/: report.json
submissions/submission-5/: auto-review-config.json  report.json
submissions/submission-5/submission/percobaan-pertama/src/: index.js
