[package]
name = "aureli"
version = "0.0.1"
edition = "2021"
authors = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.1"
matches = "0.1.10"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
regex = "1.10.3"
glob = "0.3.1"
log = "0.4.21"
reqwest = "0.11.24"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
